# ufs-weather-model

./: .gitmodules  CMakeLists.txt
cmake/: Intel.cmake  configure_apps.cmake
docker/: README.md
docker/Dockerfiles/gnu.ubuntu20/: Dockerfile-ncepext  Dockerfile-nceplibs  Dockerfile-ufs  Dockerfile-ufs-lite
gocart-interface/: CMakeLists.txt
tests/: chem.conf  compile.sh  default_vars.sh  rt.conf  rt.sh  rt_ccpp_dev.conf  rt_chem.conf  rt_chem_temp.conf
tests/fv3_conf/: ccpp_gfdlmp_run.IN  gfdlmp_run.IN  gfs_v16_run.IN
tests/parm/: ccpp_gfdlmp_gsd_chem.nml.IN  ccpp_gfdlmp_gsd_chem_ca.nml.IN  ccpp_gfdlmp_gsd_chem_sppt.nml.IN  gfdlmp_gsd_chem.nml.IN  gfdlmp_gsd_chem_ca.nml.IN  gfdlmp_gsd_chem_sppt.nml.IN  v16_c96_gsd_chem.nml.IN
tests/tests/: fv3_ccpp_gfdlmp_gsd_chem  fv3_ccpp_gfdlmp_gsd_chem_ca  fv3_ccpp_gfdlmp_gsd_chem_sppt  fv3_gfdlmp_gsd_chem  fv3_gfdlmp_gsd_chem_ca  fv3_gfdlmp_gsd_chem_ca_debug  fv3_gfdlmp_gsd_chem_debug  fv3_gfdlmp_gsd_chem_sppt  fv3_gfdlmp_gsd_chem_sppt_debug  fv3_gfs_v16_ca_emis  fv3_gfs_v16_ca_emis_debug  fv3_gfs_v16_gsd_chem  fv3_gfs_v16_gsd_chem_debug  fv3_gfs_v16_sppt_emis  fv3_gfs_v16_sppt_emis_debug
